ref contrato html

--- a/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
+++ b/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
@@ -68,13 +68,13 @@
     <li>Outras providências que as atividades docentes exigirem, obedecendo ao seu exclusivo critério, sem ingerência do(s) Contratante(s).</li>
 </ul>
 
-CLÁUSULA  6a – Submeter para análise do(s) Contratante(s) o Regi­mento Escolar e as demais obrigações constantes na legislação aplicável à área de ensino e, ainda, às emanadas de outras fontes legais, inclusive o Plano Es­colar.
+<p>CLÁUSULA  6a – Submeter para análise do(s) Contratante(s) o Regi­mento Escolar e as demais obrigações constantes na legislação aplicável à área de ensino e, ainda, às emanadas de outras fontes legais, inclusive o Plano Es­colar.</p>
 
-Da Anuidade e Condições
+<h3>Da Anuidade e Condições</h3>
 
-CLÁUSULA  7a - Como contraprestação pela prestação dos serviços educacionais oferecidos e a serem prestados, referentes ao período letivo de 2019, conforme previsto na CLÁUSULA 1a, o (s)contratante (s) pagará (ão) à contratada a anuidade mencionada na CLÁUSULA 8a e seus parágrafos.
+<p>CLÁUSULA  7a - Como contraprestação pela prestação dos serviços educacionais oferecidos e a serem prestados, referentes ao período letivo de 2019, conforme previsto na CLÁUSULA 1a, o (s)contratante (s) pagará (ão) à contratada a anuidade mencionada na CLÁUSULA 8a e seus parágrafos.</p>
 
-CLÁUSULA 8ª- O valor da anuidade é de R$ _________________ (________________________________________________________________
+<p>CLÁUSULA 8ª- O valor da anuidade é de R$ _________________ (________________________________________________________________
 _______________________________________), que deverá ser pago a tempo e modo neste instrumento convencionado e observará o seguinte:
 
 Parágrafo 1°- O valor total da anuidade será distribuído da seguinte forma conforme firmado entre os pais/responsáveis:
@@ -91,47 +91,50 @@ Setembro: ______________________________________________
 Outubro:  _______________________________________________
 Novembro:  _____________________________________________
 Dezembro:  _____________________________________________
-A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, vencendo a 2ª em ____/____/2019 e a última em dezembro de 2019.
+A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, vencendo a 2ª em ____/____/2019 e a última em dezembro de 2019.</p>
 
-Parágrafo 2°- Em caso de não-aprovação da matrícula pela Tesouraria ou Departamento Jurídico do Colégio Crescer, os valores mencionados a título de taxa de matrícula serão imediatamente reembolsados mediante recibo;
+<p>Parágrafo 2°- Em caso de não-aprovação da matrícula pela Tesouraria ou Departamento Jurídico do Colégio Crescer, os valores mencionados a título de taxa de matrícula serão imediatamente reembolsados mediante recibo;</p>
 
-Parágrafo 3°- O pagamento da mensalidade até o 5º (quinto) dia útil de cada mês terá desconto de _____% (__________), previsto no próprio boleto de pagamento;
+<p>Parágrafo 3°- O pagamento da mensalidade até o 5º (quinto) dia útil de cada mês terá desconto de _____% (__________), previsto no próprio boleto de pagamento;</p>
 
-Parágrafo 4°- A matrícula de mais de um dependente (alunos irmãos), dará direito de desconto de 10% (dez por cento) na anuidade/mensalidade. Será concedido 50% (cinquenta por cento) de desconto para irmãos na terceira matrícula.
+<p>Parágrafo 4°- A matrícula de mais de um dependente (alunos irmãos), dará direito de desconto de 10% (dez por cento) na anuidade/mensalidade. Será concedido 50% (cinquenta por cento) de desconto para irmãos na terceira matrícula.</p>
 
 
-Parágrafo 5°- Considerando o número de vagas disponibilizadas para o ano letivo de 2019 e o custo para nova oferta pública da vaga reservada, caso o(s) contratante(s) desista(m) expressamente do contrato ou da matrícula até o dia _____ de ____________ de 2019, o Colégio Crescer ressarcirá 80% (oitenta por cento) do valor pago por ocasião do requerimento de matrícula, uma vez que 20% ficará para finalidades de custos administrativos, sendo justo e contratado que, após o decurso desse prazo, não haverá devolução de quaisquer valor.
-Do Material Didático e Pessoal
+<p>Parágrafo 5°- Considerando o número de vagas disponibilizadas para o ano letivo de 2019 e o custo para nova oferta pública da vaga reservada, caso o(s) contratante(s) desista(m) expressamente do contrato ou da matrícula até o dia _____ de ____________ de 2019, o Colégio Crescer ressarcirá 80% (oitenta por cento) do valor pago por ocasião do requerimento de matrícula, uma vez que 20% ficará para finalidades de custos administrativos, sendo justo e contratado que, após o decurso desse prazo, não haverá devolução de quaisquer valor.</p>
 
-CLÁUSULA 9ª- Fica justo e convencionado que o Colégio Crescer NÃO FORNECERÁ:
+<h3>Do Material Didático e Pessoal</h3>
 
-Material Didático-Escolar 
-Material Escolar Pessoal
-Alimentação
-Transporte Escolar
-Material de Uso Pessoal
+<p>CLÁUSULA 9ª- Fica justo e convencionado que o Colégio Crescer NÃO FORNECERÁ:</p>
 
-Parágrafo 1°- Quanto ao material didático-educacional, o Colégio Crescer efetuará os pedidos bimestrais desde que, uma vez avisado os valores, o (s) contratante (s) deverá efetuar os pagamentos/depósitos em até 10 (dez) dias úteis da data do vencimento estipulado, sendo justo e convencionado que o Colégio Crescer não se obrigará a fornecer tal material em caso de não repasse dos valores em prazo hábil;
+<ul>
+    <li>Material Didático-Escolar</li> 
+    <li>Material Escolar Pessoal</li>
+    <li>Alimentação</li>
+    <li>Transporte Escolar</li>
+    <li>Material de Uso Pessoal</li>
+</ul>
+
+<p>Parágrafo 1°- Quanto ao material didático-educacional, o Colégio Crescer efetuará os pedidos bimestrais desde que, uma vez avisado os valores, o (s) contratante (s) deverá efetuar os pagamentos/depósitos em até 10 (dez) dias úteis da data do vencimento estipulado, sendo justo e convencionado que o Colégio Crescer não se obrigará a fornecer tal material em caso de não repasse dos valores em prazo hábil;</p>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
-Parágrafo 2°- Fica (m) o (s) contratante (s) expressamente informados de sua responsabilidade legal no fornecimento dos materiais necessários para educação do aluno matriculado, em especial pelo prejuízo em relação aos demais alunos e na sua formação educacional.
+<p>Parágrafo 2°- Fica (m) o (s) contratante (s) expressamente informados de sua responsabilidade legal no fornecimento dos materiais necessários para educação do aluno matriculado, em especial pelo prejuízo em relação aos demais alunos e na sua formação educacional.</p>
 
-Do Pagamento e Condições 
+<h3>Do Pagamento e Condições</h3>
 
-CLÁUSULA 10ª- O vencimento das mensalidades dar-se-á no dia 10 (dez) de cada mês, observado o seguinte:
+<p>CLÁUSULA 10ª- O vencimento das mensalidades dar-se-á no dia 10 (dez) de cada mês, observado o seguinte:</p>
 
-Parágrafo 1°- O pagamento será através de Boleto Bancário e apenas em casos excepcionais poderá ser feito na Diretoria da Escola. Sendo necessário  2ª (segunda) via será cobrado uma taxa do mesmo;
+<p>Parágrafo 1°- O pagamento será através de Boleto Bancário e apenas em casos excepcionais poderá ser feito na Diretoria da Escola. Sendo necessário  2ª (segunda) via será cobrado uma taxa do mesmo;</p>
 
-Parágrafo 2°- O atraso no pagamento das mensalidades na data estipulada retirará todos os descontos concedidos (a qualquer título como: desconto de irmãos e bolsa), em especial aqueles decorrentes de indicação e pontualidade;
+<p>Parágrafo 2°- O atraso no pagamento das mensalidades na data estipulada retirará todos os descontos concedidos (a qualquer título como: desconto de irmãos e bolsa), em especial aqueles decorrentes de indicação e pontualidade;</p>
 
-Parágrafo 3°- O atraso no pagamento importará em multa contratual de 2% (dois por cento), juros de mora de 2% (dois por cento) ao mês (pro rata die) e da correção monetária mensal pelo IGPM/FGV;
+<p>Parágrafo 3°- O atraso no pagamento importará em multa contratual de 2% (dois por cento), juros de mora de 2% (dois por cento) ao mês (pro rata die) e da correção monetária mensal pelo IGPM/FGV;</p>
 
-Parágrafo 4°- Em caso de cobrança judicial dos débitos decorrentes deste instrumento, fica justo e contratado que todas as custas processuais e honorários advocatícios serão computados como débitos líquidos e exigíveis;
+<p>Parágrafo 4°- Em caso de cobrança judicial dos débitos decorrentes deste instrumento, fica justo e contratado que todas as custas processuais e honorários advocatícios serão computados como débitos líquidos e exigíveis;</p>
 
-Parágrafo 5°- Fica justo e convencionado que a cobrança judicial ou extrajudicial dos débitos apurados terá honorários advocatícios fixados em 20% (vinte por cento) de seu montante;
+<p>Parágrafo 5°- Fica justo e convencionado que a cobrança judicial ou extrajudicial dos débitos apurados terá honorários advocatícios fixados em 20% (vinte por cento) de seu montante;</p>
 
-Parágrafo 6°- O (s) contratante (s) está (ão) plenamente ciente que o não pagamento de mensalidades acarretará a inclusão de seu(s) nome(s) no SPC/Serasa ou entidade que se assemelhe e não coibirá o protesto deste instrumento contratual no cartório competente, desde que atrasado o débito por mais de 15 (quinze) dias e notificado (s) os Contratantes.
+<p>Parágrafo 6°- O (s) contratante (s) está (ão) plenamente ciente que o não pagamento de mensalidades acarretará a inclusão de seu(s) nome(s) no SPC/Serasa ou entidade que se assemelhe e não coibirá o protesto deste instrumento contratual no cartório competente, desde que atrasado o débito por mais de 15 (quinze) dias e notificado (s) os Contratantes.</p>
 
-CLÁUSULA 11ª- Os valores da contraprestação previstos nas CLÁUSULAS anteriores incluem, exclusivamente, a prestação de serviços decorrentes e da programação anual, distribuição de classe, classificação de alunos e carga horária constante do plano es­colar.
+<p>CLÁUSULA 11ª- Os valores da contraprestação previstos nas CLÁUSULAS anteriores incluem, exclusivamente, a prestação de serviços decorrentes e da programação anual, distribuição de classe, classificação de alunos e carga horária constante do plano es­colar.</p>
 
 Parágrafo 1°- Não estão incluídos neste contrato os serviços especiais de reforço, dependência, transporte escolar, os opcionais e de uso facultativo para o aluno, as segundas chamadas de prova ou exame, a segunda via de documentos, o uni­forme, a alimentação, o material didático e o material de uso individual do aluno;
 
