ref #102 template do conttrato da crescer_sjc, views para impressão e url

--- a/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
+++ b/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
@@ -77,21 +77,21 @@
 <p>CLÁUSULA 8ª- O valor da anuidade é de R$ _________________ (________________________________________________________________
 _______________________________________), que deverá ser pago a tempo e modo neste instrumento convencionado e observará o seguinte:
 
-Parágrafo 1°- O valor total da anuidade será distribuído da seguinte forma conforme firmado entre os pais/responsáveis:
-Matrícula:  ______________________________________________
-Janeiro: ________________________________________________
-Fevereiro: ______________________________________________
-Março: _________________________________________________
-Abril:  __________________________________________________
-Maio: __________________________________________________
-Junho: _________________________________________________
-Julho:  _________________________________________________
-Agosto: ________________________________________________
-Setembro: ______________________________________________
-Outubro:  _______________________________________________
-Novembro:  _____________________________________________
-Dezembro:  _____________________________________________
-A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, vencendo a 2ª em ____/____/2019 e a última em dezembro de 2019.</p>
+<p>Parágrafo 1°- O valor total da anuidade será distribuído da seguinte forma conforme firmado entre os pais/responsáveis:</p>
+<p>Matrícula:  ______________________________________________</p>
+<p>Janeiro: ________________________________________________</p>
+<p>Fevereiro: ______________________________________________</p>
+<p>Março: _________________________________________________</p>
+<p>Abril:  __________________________________________________</p>
+<p>Maio: __________________________________________________</p>
+<p>Junho: _________________________________________________</p>
+<p>Julho:  _________________________________________________</p>
+<p>Agosto: ________________________________________________</p>
+<p>Setembro: ______________________________________________</p>
+<p>Outubro:  _______________________________________________</p>
+<p>Novembro:  _____________________________________________</p>
+<p>Dezembro:  _____________________________________________</p>
+<p>A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, vencendo a 2ª em ____/____/2019 e a última em dezembro de 2019.</p>
 
 <p>Parágrafo 2°- Em caso de não-aprovação da matrícula pela Tesouraria ou Departamento Jurídico do Colégio Crescer, os valores mencionados a título de taxa de matrícula serão imediatamente reembolsados mediante recibo;</p>
 
@@ -136,70 +136,72 @@ A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, ve
 
 <p>CLÁUSULA 11ª- Os valores da contraprestação previstos nas CLÁUSULAS anteriores incluem, exclusivamente, a prestação de serviços decorrentes e da programação anual, distribuição de classe, classificação de alunos e carga horária constante do plano es­colar.</p>
 
-Parágrafo 1°- Não estão incluídos neste contrato os serviços especiais de reforço, dependência, transporte escolar, os opcionais e de uso facultativo para o aluno, as segundas chamadas de prova ou exame, a segunda via de documentos, o uni­forme, a alimentação, o material didático e o material de uso individual do aluno;
+<p>Parágrafo 1°- Não estão incluídos neste contrato os serviços especiais de reforço, dependência, transporte escolar, os opcionais e de uso facultativo para o aluno, as segundas chamadas de prova ou exame, a segunda via de documentos, o uni­forme, a alimentação, o material didático e o material de uso individual do aluno;</p>
 
-Parágrafo 2°- O não comparecimento do aluno aos atos escolares ora contratados não exime o (s) contratante (s) do (s) pagamento (s) da (s) prestação (ões), tendo em vista a disponibilidade do ser­viço colocado pelo Colégio Crescer ao (s) contratante (s).
+<p>Parágrafo 2°- O não comparecimento do aluno aos atos escolares ora contratados não exime o (s) contratante (s) do (s) pagamento (s) da (s) prestação (ões), tendo em vista a disponibilidade do ser­viço colocado pelo Colégio Crescer ao (s) contratante (s).</p>
 
-Parágrafo 3º - Em caso de inadimplência a escola poderá optar:
+<p>Parágrafo 3º - Em caso de inadimplência a escola poderá optar:</p>
 
-Pela Cobrança amigável ou judicial do débito apurado, sem prejuízo de tudo quanto disposto na CLÁUSULA 10ª deste instrumento.
+<p>Pela Cobrança amigável ou judicial do débito apurado, sem prejuízo de tudo quanto disposto na CLÁUSULA 10ª deste instrumento.</p>
 
-CLÁUSULA 12ª- Considerando que o presente contrato é firmado antecipadamente, com previsão da prestação dos serviços para o ano letivo de 2019, de acordo com o Calendário Escolar da Escola, fica assegurada a possibilidade de alteração de valores de modo a preservar o equilíbrio contratual, caso qualquer mu­dança legislativa ou normativa altere a equação econômico-financeira do presente instrumento e possa acarretar para o Colégio Crescer o desequilíbrio de suas contas e respectivo risco na própria conclusão dos serviços.
-Parágrafo 1º- Considerando a previsão de receitas pelas matrículas efetivadas e o número de alunos matriculados, fica justo e acordado que, em nenhuma hipótese, será possível a redução do valor das mensalidades/anuidade deste instrumento, sendo certo que qualquer revisão decorrente de fator externo decorrerá se for o caso, de expressa determinação legal ou decorrente de sentença judicial.
+<p>CLÁUSULA 12ª- Considerando que o presente contrato é firmado antecipadamente, com previsão da prestação dos serviços para o ano letivo de 2019, de acordo com o Calendário Escolar da Escola, fica assegurada a possibilidade de alteração de valores de modo a preservar o equilíbrio contratual, caso qualquer mu­dança legislativa ou normativa altere a equação econômico-financeira do presente instrumento e possa acarretar para o Colégio Crescer o desequilíbrio de suas contas e respectivo risco na própria conclusão dos serviços.</p>
+<p>Parágrafo 1º- Considerando a previsão de receitas pelas matrículas efetivadas e o número de alunos matriculados, fica justo e acordado que, em nenhuma hipótese, será possível a redução do valor das mensalidades/anuidade deste instrumento, sendo certo que qualquer revisão decorrente de fator externo decorrerá se for o caso, de expressa determinação legal ou decorrente de sentença judicial.</p>
 
-Parágrafo 2º- Caso o (s) contratante (s) não concorde (m) expressamente em aderir à alteração pro­posta a tempo e modo, o presente contrato perderá sua eficácia e será rescindido de pleno direito pelas partes, por conta da inexequibilidade de seu objeto.
+<p>Parágrafo 2º- Caso o (s) contratante (s) não concorde (m) expressamente em aderir à alteração pro­posta a tempo e modo, o presente contrato perderá sua eficácia e será rescindido de pleno direito pelas partes, por conta da inexequibilidade de seu objeto.</p>
 
-CLÁUSULA 13ª– Caso, no curso da vigência do presente contrato venha a ocorrer a substituição do responsável financeiro do aluno, por morte, separação ou outra causa qualquer, a mesma deverá ocorrer de maneira formal seja por determinação judicial ou mediante tratativa pelo Departamento jurídico do Colégio Crescer.
+<p>CLÁUSULA 13ª– Caso, no curso da vigência do presente contrato venha a ocorrer a substituição do responsável financeiro do aluno, por morte, separação ou outra causa qualquer, a mesma deverá ocorrer de maneira formal seja por determinação judicial ou mediante tratativa pelo Departamento jurídico do Colégio Crescer.</p>
 
-Parágrafo Único– Em caso de separação conjugal do (a) (s) contratante (s), o Colégio Crescer deverá ser formalmente comunicado sobre a ocorrência do evento, bem como a quem coube a guarda e as demais informações complementares sobre a retirada do (a) aluno (a) do recinto escolar, sem prejuízo do disposto no inciso VII do artigo 12 da Lei nº. 9.394/96, alterado pela Lei nº. 12.013, de 06/08/2009.
+<p>Parágrafo Único– Em caso de separação conjugal do (a) (s) contratante (s), o Colégio Crescer deverá ser formalmente comunicado sobre a ocorrência do evento, bem como a quem coube a guarda e as demais informações complementares sobre a retirada do (a) aluno (a) do recinto escolar, sem prejuízo do disposto no inciso VII do artigo 12 da Lei nº. 9.394/96, alterado pela Lei nº. 12.013, de 06/08/2009.</p>
 
 
-CLÁUSULA 14ª– O presente contrato tem duração até o final do período letivo mencionado e contratado e poderá ser rescindido nas seguintes hipóteses:
+<p>CLÁUSULA 14ª– O presente contrato tem duração até o final do período letivo mencionado e contratado e poderá ser rescindido nas seguintes hipóteses:</p>
 
-Pelo responsável
-Por desistência formal
-Por transferência formal
-Pela escola (Por desligamento nos termos do item IV do Artigo 82º do Regimento Escolar e por rescisão na forma do § 4º da CLÁUSULA10a.)
+<p>Pelo responsável</p>
+<p>Por desistência formal</p>
+<p>Por transferência formal</p>
+<p>Pela escola (Por desligamento nos termos do item IV do Artigo 82º do Regimento Escolar e por rescisão na forma do § 4º da CLÁUSULA10a.)</p>
 
-Parágrafo Único – Em todos os casos fica(m) o(s) contratante(s) obrigado(s) a pagar (em) o valor da parcela do mês em que ocorrer o evento (calculados pro rata die), além de outros débitos eventualmente existentes, nos termos deste instrumento.
+<p>Parágrafo Único – Em todos os casos fica(m) o(s) contratante(s) obrigado(s) a pagar (em) o valor da parcela do mês em que ocorrer o evento (calculados pro rata die), além de outros débitos eventualmente existentes, nos termos deste instrumento.</p>
 
-Das Disposições Finais
+<p>Das Disposições Finais</p>
 
-CLÁUSULA 15ª- Ao firmar o presente contrato o(s) Contratante(s) declara(m) que tem conhecimento prévio do Regimento Escolar mediante recibo assinado e anexo a este e das instruções específicas que lhe foram apresentadas e que passam a fazer parte integrante do presente contrato, submetendo-se às suas disposições, bem como das demais obrigações decorrentes da legislação aplicável à área de ensino. 
+<p>CLÁUSULA 15ª- Ao firmar o presente contrato o(s) Contratante(s) declara(m) que tem conhecimento prévio do Regimento Escolar mediante recibo assinado e anexo a este e das instruções específicas que lhe foram apresentadas e que passam a fazer parte integrante do presente contrato, submetendo-se às suas disposições, bem como das demais obrigações decorrentes da legislação aplicável à área de ensino. </p>
             
-Parágrafo 1º- Independentemente do acima declarado, o Regimento Escolar e demais instruções estarão à disposição do Contratante para consulta na sede do Colégio Crescer.
+<p>Parágrafo 1º- Independentemente do acima declarado, o Regimento Escolar e demais instruções estarão à disposição do Contratante para consulta na sede do Colégio Crescer.</p>
 
-Parágrafo 2º - Obriga (m) - se o (s) contratante (s) a fazer com que o (s) aluno (s) cumpra (m) o calendário escolar e horário estabelecidos pelo Colégio Crescer, assumindo total responsabilidade pelos problemas advindos da não observância destes.
+<p>Parágrafo 2º - Obriga (m) - se o (s) contratante (s) a fazer com que o (s) aluno (s) cumpra (m) o calendário escolar e horário estabelecidos pelo Colégio Crescer, assumindo total responsabilidade pelos problemas advindos da não observância destes.</p>
 
-Parágrafo 3º- O (s) contratante (s) está (ão) ciente (s) da obrigatoriedade do uso completo do uniforme escolar por parte do (s) aluno (s), bem como da aquisição de todo o material escolar individual exigido, assumindo inteiramente a responsabilidade por qualquer fato que venha a prejudicar o aluno pelo descumprimento desta obrigação.
+<p>Parágrafo 3º- O (s) contratante (s) está (ão) ciente (s) da obrigatoriedade do uso completo do uniforme escolar por parte do (s) aluno (s), bem como da aquisição de todo o material escolar individual exigido, assumindo inteiramente a responsabilidade por qualquer fato que venha a prejudicar o aluno pelo descumprimento desta obrigação.</p>
 
-Parágrafo 4º- O presente instrumento contratual não inclui, em nenhuma hipótese, material escolar e pessoal individual, material didático, uniforme e alimentação, sendo responsabilidade plena do(s) Contratante(s) tal aquisição, sem prejuízo das demais regras contratuais previstas neste instrumento.
+<p>Parágrafo 4º- O presente instrumento contratual não inclui, em nenhuma hipótese, material escolar e pessoal individual, material didático, uniforme e alimentação, sendo responsabilidade plena do(s) Contratante(s) tal aquisição, sem prejuízo das demais regras contratuais previstas neste instrumento.</p>
 
-CLÁUSULA 16ª– O Colégio Crescer, livre de quaisquer ônus para com o (s) contra­tante (s), poderá (ão) utilizar (em) - se da sua imagem para fins exclusivos de divulgação da escola e suas atividades podendo, para tanto, reproduzi-la ou divulgá-la junto a internet, jornais e todos os demais meios de co­municação, públicos ou privados, sempre observados a moral, os costumes e a ordem pública.
+<p>CLÁUSULA 16ª– O Colégio Crescer, livre de quaisquer ônus para com o (s) contra­tante (s), poderá (ão) utilizar (em) - se da sua imagem para fins exclusivos de divulgação da escola e suas atividades podendo, para tanto, reproduzi-la ou divulgá-la junto a internet, jornais e todos os demais meios de co­municação, públicos ou privados, sempre observados a moral, os costumes e a ordem pública.</p>
 
-CLÁUSULA 17ª- O(s) Contratante(s) autoriza(m) o repasse dos seus dados cadastrais ao INEP – Instituto Nacional de Estudos e Pesquisas Educacionais, quando este solicitar suas informações, para fins estatísticos.
+<p>CLÁUSULA 17ª- O(s) Contratante(s) autoriza(m) o repasse dos seus dados cadastrais ao INEP – Instituto Nacional de Estudos e Pesquisas Educacionais, quando este solicitar suas informações, para fins estatísticos.</p>
 
-CLÁUSULA 18ª- As partes atribuem ao presente contrato plena eficácia e força executiva extrajudicial, em especial para efeitos de protesto, nos termos da lei.
+<p>CLÁUSULA 18ª- As partes atribuem ao presente contrato plena eficácia e força executiva extrajudicial, em especial para efeitos de protesto, nos termos da lei.</p>
 
-CLÁUSULA 19ª- Também assina o presente instrumento, na qualidade de contratante (s), o (a) cônjuge do (a) contratante, abaixo nomeada, o (a) qual tem, portanto, os mesmos direitos, deveres e obrigações.
+<p>CLÁUSULA 19ª- Também assina o presente instrumento, na qualidade de contratante (s), o (a) cônjuge do (a) contratante, abaixo nomeada, o (a) qual tem, portanto, os mesmos direitos, deveres e obrigações.</p>
 
-CLÁUSULA 20ª- Para dirimir questões oriundas deste contrato fica eleito o Foro da Comarca de São José dos Campos em cuja jurisdição a Escola tem domicílio, arcando a parte vencida em demanda judicial com à custa processuais a que der causa e com os honorários advocatícios arbitrados ao patrono da parte vencedora.
+<p>CLÁUSULA 20ª- Para dirimir questões oriundas deste contrato fica eleito o Foro da Comarca de São José dos Campos em cuja jurisdição a Escola tem domicílio, arcando a parte vencida em demanda judicial com à custa processuais a que der causa e com os honorários advocatícios arbitrados ao patrono da parte vencedora.</p>
 
-E, por estarem às partes de acordo com todos os termos e condições do presente contrato, assinam este instrumento em duas vias de igual teor e forma, na presença das testemunhas abaixo, para que se produzam todos os efeitos legais.
+<p>E, por estarem às partes de acordo com todos os termos e condições do presente contrato, assinam este instrumento em duas vias de igual teor e forma, na presença das testemunhas abaixo, para que se produzam todos os efeitos legais.</p>
 
     
-São José dos Campos,____de___________de 201__.
+<p>São José dos Campos,____de___________de 201__.</p>
 
 
-CRESCER ESPAÇO DE CRESCIMENTO E APERFEIÇOAMENTO PSICOPEDAGÓGICO S/C LTDA
+<p>CRESCER ESPAÇO DE CRESCIMENTO E APERFEIÇOAMENTO PSICOPEDAGÓGICO S/C LTDA</p>
 (Contratada)
 
 
-_____________________________________________
-(Nome do contratante/responsável)
+<p>_____________________________________________</p>
+<p>(Nome do contratante/responsável)</p>
 
 
-Testemunhas: 1. ___________________________________________________
+<p>Testemunhas: </p>
 
-           2.___________________________________________________
+<P>1. ___________________________________________________</p>
+
+<p>2.____________________________________________________</p>
         
