ref #102 vlores do contrato vindo do BD, inicio

--- a/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
+++ b/escolar/financeiro/templates/financeiro/contrato_crescer_sjc.html
@@ -78,19 +78,19 @@
 <p>CLÁUSULA 8ª- O valor da anuidade é de R$ {{ contrato.valor|numberformat_br }} ( {{ contrato.get_valor_extenso }} ), que deverá ser pago a tempo e modo neste instrumento convencionado e observará o seguinte:
 
 <p>Parágrafo 1°- O valor total da anuidade será distribuído da seguinte forma conforme firmado entre os pais/responsáveis:</p>
-<p>Matrícula:  ______________________________________________</p>
-<p>Janeiro: ________________________________________________</p>
-<p>Fevereiro: ______________________________________________</p>
-<p>Março: _________________________________________________</p>
-<p>Abril:  __________________________________________________</p>
-<p>Maio: __________________________________________________</p>
-<p>Junho: _________________________________________________</p>
-<p>Julho:  _________________________________________________</p>
-<p>Agosto: ________________________________________________</p>
-<p>Setembro: ______________________________________________</p>
-<p>Outubro:  _______________________________________________</p>
-<p>Novembro:  _____________________________________________</p>
-<p>Dezembro:  _____________________________________________</p>
+<p>Matrícula:  R$ {{ contrato.matricula_valor|numberformat_br }}</p>
+<p>Janeiro: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Fevereiro: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Março: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Abril:  R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Maio: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Junho: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Julho:  R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Agosto: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Setembro: R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Outubro:  R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Novembro:  R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
+<p>Dezembro:  R$ {{ contrato.parcelas_anuidade|numberformat_br }}</p>
 <p>A 1ª mensalidade vencendo no dia ____/____/2019 e as demais, sucessivamente, vencendo a 2ª em ____/____/2019 e a última em dezembro de 2019.</p>
 
 <p>Parágrafo 2°- Em caso de não-aprovação da matrícula pela Tesouraria ou Departamento Jurídico do Colégio Crescer, os valores mencionados a título de taxa de matrícula serão imediatamente reembolsados mediante recibo;</p>
@@ -190,13 +190,12 @@
     
 <p>São José dos Campos,____de___________de 201__.</p>
 
-
-<p>CRESCER ESPAÇO DE CRESCIMENTO E APERFEIÇOAMENTO PSICOPEDAGÓGICO S/C LTDA</p>
-(Contratada)
-
+<p>_____________________________________________</p>
+<p>CRESCER ESPAÇO DE CRESCIMENTO E APERFEIÇOAMENTO PSICOPEDAGÓGICO S/C LTDA (Contratada)</p>
+<p></p>
 
 <p>_____________________________________________</p>
-<p>(Nome do contratante/responsável)</p>
+<p>{{ contrato.responsavel }} (Contratante)</p>
 
 
 <p>Testemunhas: </p>
